# GeoVue

./: .gitignore  AGENTS.md  CLAUDE.md  ChipTrayApp.spec  GITHUB_SETUP.md  GeoVue-Debug.spec  GeoVue-OneDir.spec  GeoVue.code-workspace  GeoVue.spec  LICENSE  README.md  Rebuild App.bat  VALIDATION_TOOL_README.md  __init__.py  config.json  conftest.py  install.bat  launcher.py  main.py  package_app_for_distribution.bat  pyproject.toml  pytest.ini  run_validation_tool.bat  setup_github.ps1  test_core_enhancements.py  validate_enhancements.py  validation_tool.py
.claude/: settings.local.json
chip_tray_processor.egg-info/: top_level.txt
core/: config_manager.py  file_manager.py  repo_updater.py  translator.py
docs/: DATA_VALIDATIONS_AND_FLAGS.md  DOCUMENTATION PLAN.md  LOGGING_REVIEW_DIALOG_FIXES_PLAN.md  LOGGING_REVIEW_REPORT_PLAN.md  LOGGING_REVIEW_REPORT_STATUS.md  LOGGING_REVIEW_VOLUME_BIAS_PLAN.md  Logging_Review_Integration_Review.md  Logging_Review_Report_QA_Checklist.md  START_OF_DAY.md  Section_Tool_GeoVue_Integration_Proposal.md  Section_Tool_Integration_Analysis.md  similarity_search_system.md  televiewer_integration_plan.md
gui/: __init__.py  compartment_registration_dialog.py  dialog_helper.py  drillhole_trace_designer.py  duplicate_handler.py  first_run_dialog.py  gui_manager.py  logging_review_dialog.py  main_gui.py  qaqc_manager.py
ml_detection/: GeoVue_Training_Colab.ipynb  README.md  analyze_biff_population.py  analyze_non_bif_gangue_population.py  build_bif_parent_training_assignments.py  build_biff_axis_labels.py  build_visual_label_binary_dataset.py  cell_classifier.py  cluster_non_bif_images.py  copy_classifier_images.py  create_biff_cluster_contact_sheets.py  export_to_onnx.py  grain_segmentation_labeler.py  (+13 more)
(+538 files in other folders)
