[project]
name = "GeoVue"
version = "2.0.3"
description = "Chip Tray Photo Processor"
requires-python = ">=3.7"

dependencies = [
    "numpy",
    "opencv-python",
    "pillow",
    "pandas",
    "openpyxl",
    "piexif>=1.1.3",
    "requests",
    "pywin32"
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "no-member",         # ignore “x has no y member”
  "logging-not-lazy",  # ignore “use lazy % formatting in logging functions”
  "broad-except",      # ignore “catching too general exception”
  "line-too-long"      # ignore “any line too long”
]

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.black]


[project.scripts]
chiptray = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # tells setuptools where to find the actual Python packages
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"resources" = ["*.png", "*.csv", "*.ico", "*.json", "color_presets/*.json", "Register Template File/*.xltx"]
